WebApiNet5/k8s/deployment-ingress-version/WebApiNet5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapinet5-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:  
  - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
          name: webapinet5
          port:
            number: 99
